--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -9,7 +9,6 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,22 +17,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'welcome' %}">Instagram <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'welcome' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'search_profile' %}">Search </a>
+                    <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'signout' %}">Logout</a>
                 </li>
             </ul>
         </div>
         <div class="col-sm-4 col-md-4 navbar-right">
 
-            <form class="navbar-form" role="search" action="">
+            <form class="navbar-form" role="search" action="/search">
 
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search Profile " name="image">
+                    <input type="text" class="form-control" placeholder="Search Profile " name="search_user">
                 </div>
 
             </form>
+            
         </div>
         </div>
     </nav>
