--- a/instaapp/templates/profile.html
+++ b/instaapp/templates/profile.html
@@ -4,7 +4,22 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            images go here
+            {% if images %}
+            {% for image in images %}
+            <div class="card" style="margin-top: 30px;">
+                <div class="card-header">
+                    {{ image.name }}
+                </div>
+                <div class="card-body">
+                    <img src="{{image.image.url}}" class="card-img-top" alt="Image" style="width: 100%; height: 400px;">
+                    <p>{{ image.caption }} </p>
+                    <p>
+                        <span>{{ image.likes }}</span>
+                    </p>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
         </div>
         <div class="col-md-4">
             {% if form.errors %}
@@ -15,7 +30,7 @@
 
                 <div class="panel-body">
 
-                    <form action="" method="post">
+                    <form action="" method="post" enctype='multipart/form-data'>
                         {% csrf_token %}
                         {% bootstrap_form form %}
                         <div class="form-group">
