--- a/instaapp/templates/profile.html
+++ b/instaapp/templates/profile.html
@@ -34,7 +34,7 @@
                         {% csrf_token %}
                         {% bootstrap_form form %}
                         <div class="form-group">
-                            <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
+                            <input type="submit" class="btn btn-primary btn-sm" value="upload image">
                         </div>
 
                     </form>
